--- a/_posts/2022-03-25-first.md
+++ b/_posts/2022-03-25-first.md
@@ -1,21 +1,28 @@
 ---
+layout: single
 title:  '2022년 3월 25일(금)'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ---
 
-# 오늘 하루 컴공부 뿌셨다🔥
+# 오류에 오류를 더해서~_~  오예~~
 
-내일 학교 가니까.. 저번 주 배웠던 것들 복습하고!
-이왕 공부하는 김에 맥북으로 해서 맥북이랑도 친해지려고 노력 중!
-
-전부터 해야지 해야지 마음먹었던 블로그도 한번 해보려고 한다..!!
-네이버 블로그, 티스토리 블로그 계속 고민하다가
-개발군 취업에 가산점이 될 수도 있는.. 깃허브 블로그를 만들기로 결정+_+!!
-
-작년에 웹 프로그래밍에서 배운 걸 이 블로그 만들면서 아주 살짝 쓰고 있다..!
-쪼끔 신기하면서도 재밌구몽ㅎ.ㅎ
-
-
-
-**실시간으로 반영이 되는 것을 확인할 수 있나요?**
+하아... 괜히 깃허브 블로그 한다고 설쳐서 암걸릴 지경까지 왔는가..
+나는 무엇을 위해 이러고 있는 것인가....
 
 ![타마마](../images/2022-03-25-first/타마마.jpg)
