--- a/_posts/2022-03-25-first.md
+++ b/_posts/2022-03-25-first.md
@@ -1,28 +1,36 @@
 ---
 layout: single
-title:  '2022년 3월 25일(금)'
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+title:  'github blog 만들기'
+categories: Blog
+tag: [Python, Blog, Jekyll]
 ---
 
-# 오류에 오류를 더해서~_~  오예~~
 
-하아... 괜히 깃허브 블로그 한다고 설쳐서 암걸릴 지경까지 왔는가..
-나는 무엇을 위해 이러고 있는 것인가....
+
+# Python 코딩 테스트
+
+
+```python
+class <ClassName>:
+
+    <class_attribute_name> = <value>
+
+    def __init__(self,<param1>, <param2>, ...):
+        self.<attr1> = <param1>
+        self.<attr2> = <param2>
+        .
+        .
+        .
+        # As many attributes as needed
+    
+   def <method_name>(self, <param1>, ...):
+       <code>
+       
+   # As many methods as needed
+```
+
+
+
+# 이미지 테스트
 
 ![타마마](../images/2022-03-25-first/타마마.jpg)
